feat:串口2中断和DMA收发正常，串口2和串口1不能同时配置

--- a/.config
+++ b/.config
@@ -20,7 +20,7 @@ CONFIG_RT_IDLE_HOOK_LIST_SIZE=4
 CONFIG_IDLE_THREAD_STACK_SIZE=256
 CONFIG_RT_USING_TIMER_SOFT=y
 CONFIG_RT_TIMER_THREAD_PRIO=4
-CONFIG_RT_TIMER_THREAD_STACK_SIZE=512
+CONFIG_RT_TIMER_THREAD_STACK_SIZE=128
 
 #
 # kservice optimization
@@ -85,7 +85,7 @@ CONFIG_ARCH_ARM_CORTEX_M3=y
 #
 CONFIG_RT_USING_COMPONENTS_INIT=y
 CONFIG_RT_USING_USER_MAIN=y
-CONFIG_RT_MAIN_THREAD_STACK_SIZE=1024
+CONFIG_RT_MAIN_THREAD_STACK_SIZE=512
 CONFIG_RT_MAIN_THREAD_PRIORITY=10
 # CONFIG_RT_USING_LEGACY is not set
 # CONFIG_RT_USING_MSH is not set
@@ -101,8 +101,8 @@ CONFIG_RT_USING_DEVICE_IPC=y
 CONFIG_RT_USING_SERIAL=y
 CONFIG_RT_USING_SERIAL_V1=y
 # CONFIG_RT_USING_SERIAL_V2 is not set
-# CONFIG_RT_SERIAL_USING_DMA is not set
-CONFIG_RT_SERIAL_RB_BUFSZ=256
+CONFIG_RT_SERIAL_USING_DMA=y
+CONFIG_RT_SERIAL_RB_BUFSZ=128
 # CONFIG_RT_USING_CAN is not set
 # CONFIG_RT_USING_HWTIMER is not set
 # CONFIG_RT_USING_CPUTIME is not set
@@ -179,32 +179,7 @@ CONFIG_RT_LIBC_DEFAULT_TIMEZONE=8
 # Utilities
 #
 # CONFIG_RT_USING_RYM is not set
-CONFIG_RT_USING_ULOG=y
-# CONFIG_ULOG_OUTPUT_LVL_A is not set
-# CONFIG_ULOG_OUTPUT_LVL_E is not set
-# CONFIG_ULOG_OUTPUT_LVL_W is not set
-# CONFIG_ULOG_OUTPUT_LVL_I is not set
-CONFIG_ULOG_OUTPUT_LVL_D=y
-CONFIG_ULOG_OUTPUT_LVL=7
-# CONFIG_ULOG_USING_ISR_LOG is not set
-CONFIG_ULOG_ASSERT_ENABLE=y
-CONFIG_ULOG_LINE_BUF_SIZE=128
-# CONFIG_ULOG_USING_ASYNC_OUTPUT is not set
-
-#
-# log format
-#
-# CONFIG_ULOG_OUTPUT_FLOAT is not set
-# CONFIG_ULOG_USING_COLOR is not set
-# CONFIG_ULOG_OUTPUT_TIME is not set
-CONFIG_ULOG_OUTPUT_LEVEL=y
-CONFIG_ULOG_OUTPUT_TAG=y
-CONFIG_ULOG_OUTPUT_THREAD_NAME=y
-# end of log format
-
-CONFIG_ULOG_BACKEND_USING_CONSOLE=y
-# CONFIG_ULOG_USING_FILTER is not set
-# CONFIG_ULOG_USING_SYSLOG is not set
+# CONFIG_RT_USING_ULOG is not set
 # CONFIG_RT_USING_UTEST is not set
 # CONFIG_RT_USING_VAR_EXPORT is not set
 # CONFIG_RT_USING_RT_LINK is not set
