--- a/.config
+++ b/.config
@@ -102,7 +102,7 @@ CONFIG_RT_USING_SERIAL=y
 CONFIG_RT_USING_SERIAL_V1=y
 # CONFIG_RT_USING_SERIAL_V2 is not set
 CONFIG_RT_SERIAL_USING_DMA=y
-CONFIG_RT_SERIAL_RB_BUFSZ=512
+CONFIG_RT_SERIAL_RB_BUFSZ=256
 # CONFIG_RT_USING_CAN is not set
 # CONFIG_RT_USING_HWTIMER is not set
 # CONFIG_RT_USING_CPUTIME is not set
@@ -196,9 +196,8 @@ CONFIG_ULOG_LINE_BUF_SIZE=128
 #
 # CONFIG_ULOG_OUTPUT_FLOAT is not set
 CONFIG_ULOG_USING_COLOR=y
-CONFIG_ULOG_OUTPUT_TIME=y
-# CONFIG_ULOG_TIME_USING_TIMESTAMP is not set
-CONFIG_ULOG_OUTPUT_LEVEL=y
+# CONFIG_ULOG_OUTPUT_TIME is not set
+# CONFIG_ULOG_OUTPUT_LEVEL is not set
 CONFIG_ULOG_OUTPUT_TAG=y
 # CONFIG_ULOG_OUTPUT_THREAD_NAME is not set
 # end of log format
@@ -316,6 +315,7 @@ CONFIG_ULOG_BACKEND_USING_CONSOLE=y
 # CONFIG_PKG_USING_NET_SERVER is not set
 # CONFIG_PKG_USING_ZFTP is not set
 # CONFIG_PKG_USING_WOL is not set
+# CONFIG_PKG_USING_ZEPHYR_POLLING is not set
 # end of IoT - internet of things
 
 #
@@ -393,18 +393,11 @@ CONFIG_ULOG_BACKEND_USING_CONSOLE=y
 # CONFIG_PKG_USING_MP3PLAYER is not set
 # CONFIG_PKG_USING_TINYJPEG is not set
 # CONFIG_PKG_USING_UGUI is not set
-
-#
-# PainterEngine: A cross-platform graphics application framework written in C language
-#
-# CONFIG_PKG_USING_PAINTERENGINE is not set
-# CONFIG_PKG_USING_PAINTERENGINE_AUX is not set
-# end of PainterEngine: A cross-platform graphics application framework written in C language
-
 # CONFIG_PKG_USING_MCURSES is not set
 # CONFIG_PKG_USING_VT100 is not set
 # CONFIG_PKG_USING_QRCODE is not set
 # CONFIG_PKG_USING_GUIENGINE is not set
+# CONFIG_PKG_USING_3GPP_AMRNB is not set
 # end of multimedia packages
 
 #
@@ -699,7 +692,6 @@ CONFIG_PKG_EASYBLINK_VER="v2.0.1"
 # CONFIG_PKG_USING_MISAKA_AT24CXX is not set
 # CONFIG_PKG_USING_MISAKA_RGB_BLING is not set
 # CONFIG_PKG_USING_LORA_MODEM_DRIVER is not set
-# CONFIG_PKG_USING_BL_MCU_SDK is not set
 # CONFIG_PKG_USING_SOFT_SERIAL is not set
 # CONFIG_PKG_USING_MB85RS16 is not set
 # CONFIG_PKG_USING_RFM300 is not set
