--- a/.settings/projcfg.ini
+++ b/.settings/projcfg.ini
@@ -1,5 +1,5 @@
 #RT-Thread Studio Project Configuration
-#Tue Jul 23 10:31:24 CST 2024
+#Mon Aug 05 09:03:07 CST 2024
 project_type=rtt
 chip_name=STM32F103C8
 cpu_name=None
@@ -19,4 +19,4 @@ tx_pin_name=PA9
 rtt_nano_path=
 output_project_path=D\:/workplace_RT
 hardware_adapter=DAP-LINK
-project_name=c8t6
+project_name=zsp-001
